# iot-suunnittelu-nopeusmittari

./: .gitignore  .gitmodules  CMakeLists.txt  DHT20.c  DHT20.h  README.md  cmake_install.cmake  dht20.py  hw_config.c  nopeusmittari.c
Grove_LCD_RGB_Backlight/: CMakeLists.txt  rgb_lcd.c  rgb_lcd.h
dht20/: DHT20.c  DHT20.h
nopeusmittari/: CMakeLists.txt
painekytkin/: painekytkin.kicad_sch
valoportti/: painekytkin.kicad_prl  painekytkin.kicad_pro  painekytkin.kicad_sch
